--- a/src/styles/hb.scss
+++ b/src/styles/hb.scss
@@ -27,6 +27,7 @@ li
 
 .hb-icon-mobile{
     color:blue;
+    padding-bottom: 15%;
 }
 
 
